--- a/css/main.css
+++ b/css/main.css
@@ -291,47 +291,6 @@ button {
   transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
 }
 
-.contact {
-  display: flex;
-  margin-left: auto;
-  align-items: center;
-}
-
-.contact__item {
-  display: flex;
-  align-items: center;
-  fill: #757575;
-}
-
-.contact__item:not(:last-child) {
-  display: flex;
-  margin-right: 50px;
-  padding-bottom: 0;
-}
-
-.contact__link {
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.15;
-  letter-spacing: 0.02em;
-  color: #757575;
-  display: flex;
-  align-items: center;
-  transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
-}
-
-.contact__link:hover, .contact__link:focus {
-  color: #2196f3;
-  fill: #2196f3;
-}
-
-.contact__icon {
-  display: flex;
-  align-items: center;
-  margin-right: 10px;
-}
-
 .backdrop {
   position: fixed;
   left: 0;
@@ -818,8 +777,8 @@ button {
     text-align: center;
     letter-spacing: 0.03em;
   }
-  .footer .address {
-    text-align: center;
+  .footer .address__list {
+    padding-bottom: 60px;
   }
   .footer .address__item {
     text-align: center;
@@ -839,9 +798,8 @@ button {
   .footer__join {
     width: 206px;
     height: 80px;
-    margin-right: 70px;
   }
-  .footer__join__title {
+  .footer .join__title {
     font-family: "Roboto", sans-serif;
     font-weight: bold;
     font-size: 14px;
@@ -851,7 +809,98 @@ button {
     color: #ffffff;
     margin-bottom: 20px;
   }
-  .footer__subscribe__title {
+  .contact__link {
+    display: block;
+    text-align: center;
+  }
+}
+
+.social-list {
+  padding-bottom: 60px;
+}
+
+.subscribe {
+  text-align: center;
+}
+
+.subscribe__title {
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+  margin-bottom: 20px;
+}
+
+.subscribe__footer {
+  width: 100%;
+}
+
+.subscribe__input {
+  width: 100%;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background: #2f303a;
+  outline: none;
+  margin-right: 12px;
+  padding-left: 16px;
+  margin-bottom: 20px;
+  color: #ffffff;
+  transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+}
+
+.subscribe__input:hover, .subscribe__input:focus {
+  border: 1px solid #2196f3;
+}
+
+.subscribe__input input[name="email"] {
+  color: #ffffff;
+}
+
+.subscribe__send {
+  margin-left: 10px;
+}
+
+@media screen and (min-width: 768px) {
+  .footer {
+    background: #2f303a;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    display: block;
+  }
+  .footer__content {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+  .footer__content__address {
+    text-align: center;
+    margin-bottom: 60px;
+  }
+  .footer__content__address__item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+  .footer__content__address__link {
+    font-family: "Roboto", sans-serif;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: #ffffff;
+  }
+  .footer__content__join {
+    width: 206px;
+    display: inline-block;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 60px;
+  }
+  .footer__content__join__title {
     font-family: "Roboto", sans-serif;
     font-weight: bold;
     font-size: 14px;
@@ -861,10 +910,27 @@ button {
     color: #ffffff;
     margin-bottom: 20px;
   }
-  .footer__subscribe__footer {
+  .footer__content__subscribe {
+    display: inline-flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+  }
+  .footer__content__subscribe__title {
+    font-family: "Roboto", sans-serif;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #ffffff;
+    margin-bottom: 20px;
+  }
+  .footer__content__subscribe__footer {
     display: flex;
   }
-  .footer__subscribe__input {
+  .footer__content__subscribe__input {
     width: 360px;
     height: 50px;
     border: 1px solid rgba(255, 255, 255, 0.3);
@@ -877,13 +943,13 @@ button {
     color: #ffffff;
     transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
   }
-  .footer__subscribe__input:hover, .footer__subscribe__input:focus {
+  .footer__content__subscribe__input:hover, .footer__content__subscribe__input:focus {
     border: 1px solid #2196f3;
   }
-  .footer__subscribe input[name="email"] {
+  .footer__content__subscribe input[name="email"] {
     color: #ffffff;
   }
-  .footer__subscribe__send {
+  .footer__content__subscribe__send {
     margin-left: 10px;
   }
 }
@@ -1407,6 +1473,67 @@ button {
   }
   .client__item:not(last-child) {
     flex-basis: calc(100% / 2 - 30px);
+    margin-left: 30px;
+    margin-top: 30px;
+  }
+  .client__link {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 90px;
+    border: 1px solid #afb1b8;
+    box-sizing: border-box;
+    border-radius: 4px;
+    transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+  }
+  .client__link:focus, .client__link:hover {
+    border: 1px solid #2196f3;
+  }
+  .client__link:focus .client__icon, .client__link:hover .client__icon {
+    fill: #2196f3;
+  }
+  .client__icon {
+    fill: #afb1b8;
+    transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+  }
+}
+
+@media screen and (min-width: 767px) {
+  .client {
+    padding: 60px 0;
+    display: flex;
+    align-items: center;
+  }
+  .client__title {
+    font-family: Roboto;
+    font-weight: bold;
+    font-size: 28px;
+    line-height: 1.18;
+    letter-spacing: 0.03em;
+    color: #212121;
+    text-align: center;
+    margin-bottom: 30px;
+  }
+  .client__list {
+    display: flex;
+    margin-left: -30px;
+    margin-top: -30px;
+    flex-wrap: wrap;
+  }
+  .client__item {
+    width: 210px;
+    height: 90px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #afb1b8;
+    box-sizing: border-box;
+    border-radius: 4px;
+    fill: #afb1b8;
+  }
+  .client__item:not(last-child) {
+    flex-basis: calc(100% / 3 - 30px);
     margin-left: 30px;
     margin-top: 30px;
   }
