--- a/sass/layout/_client.scss
+++ b/sass/layout/_client.scss
@@ -73,6 +73,81 @@
   }
 }
 
+@media screen and (min-width: 767px) {
+  .client {
+    padding: 60px 0;
+    display: flex;
+    align-items: center;
+
+    &__title {
+      font-family: Roboto;
+      font-weight: bold;
+      font-size: 28px;
+      line-height: 1.18;
+      letter-spacing: 0.03em;
+      color: $accent-color;
+
+      text-align: center;
+      margin-bottom: 30px;
+    }
+
+    &__list {
+      // margin-top: 50px;
+      display: flex;
+      margin-left: -30px;
+      margin-top: -30px;
+      flex-wrap: wrap;
+    }
+
+    &__item {
+      width: 210px;
+      height: 90px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      border: 1px solid #afb1b8;
+      box-sizing: border-box;
+      border-radius: 4px;
+
+      fill: #afb1b8;
+
+      &:not(last-child) {
+        flex-basis: calc(100% / 3 - 30px);
+        margin-left: 30px;
+        margin-top: 30px;
+      }
+    }
+
+    &__link {
+      display: inline-flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 90px;
+      border: 1px solid #afb1b8;
+      box-sizing: border-box;
+      border-radius: 4px;
+
+      transition: $transition-animation;
+
+      &:focus,
+      &:hover {
+        border: 1px solid $active-color;
+
+        .client__icon {
+          fill: $active-color;
+        }
+      }
+    }
+
+    &__icon {
+      fill: #afb1b8;
+      transition: $transition-animation;
+    }
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .client {
     display: flex;
