--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -3,9 +3,9 @@
     background: #f5f4fa;
     padding: 60px 0;
 
-    &__list {
-      width: 450px;
-    }
+    // &__list {
+    //   width: 100%;
+    // }
 
     &__title {
       font-family: $main-font;
