--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -81,10 +81,6 @@
   }
 }
 
-.social-list {
-  padding-bottom: 60px;
-}
-
 .subscribe {
   text-align: center;
   &__title {
@@ -135,8 +131,9 @@
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 767px) {
   .footer {
+    text-align: center;
     background: $color-footer;
     padding-top: 60px;
     padding-bottom: 60px;
@@ -148,105 +145,256 @@
       flex-direction: row;
       flex-wrap: wrap;
       justify-content: space-around;
+    }
 
-      &__address {
+    &__address {
+      display: block;
+      text-align: center;
+    }
+
+    .logo {
+      &__footer {
+        width: 100%;
+        margin-bottom: 20px;
+
+        font-family: $secondary-font;
+        font-weight: bold;
+        font-size: 24px;
+        line-height: 1.16;
         text-align: center;
-        margin-bottom: 60px;
+        letter-spacing: 0.03em;
+      }
+    }
 
-        &__item:not(:last-child) {
+    .address {
+      &__list {
+        padding-bottom: 60px;
+      }
+
+      &__item {
+        text-align: center;
+
+        &:not(:last-child) {
           margin-bottom: 10px;
         }
-
-        &__link {
-          font-family: $main-font;
-          font-weight: normal;
-          font-size: 14px;
-          line-height: 1.71;
-          letter-spacing: 0.03em;
-
-          color: #ffffff;
-        }
       }
 
-      &__join {
-        width: 206px;
-        // height: 80px;
-        // margin-right: 70px;
-        display: inline-block;
-        align-items: center;
+      &__link {
+        font-family: $main-font;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 1.71;
+        letter-spacing: 0.03em;
         text-align: center;
-        margin-bottom: 60px;
 
-        &__title {
-          font-family: $main-font;
-          font-weight: bold;
-          font-size: 14px;
-          line-height: 1.14;
-          letter-spacing: 0.03em;
-          text-transform: uppercase;
-
-          color: #ffffff;
-
-          margin-bottom: 20px;
-        }
+        color: #ffffff;
       }
+    }
 
-      &__subscribe {
-        display: inline-flex;
-        flex-direction: column;
-        text-align: center;
-        align-items: center;
-        justify-content: center;
+    &__join {
+      display: inline-block;
+      align-items: center;
+      text-align: center;
+    }
+    .join {
+      &__title {
+        font-family: $main-font;
+        font-weight: bold;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
 
-        &__title {
-          font-family: $main-font;
-          font-weight: bold;
-          font-size: 14px;
-          line-height: 1.14;
-          letter-spacing: 0.03em;
-          text-transform: uppercase;
+        color: #ffffff;
 
-          color: #ffffff;
-
-          margin-bottom: 20px;
-        }
-
-        &__footer {
-          display: flex;
-        }
-
-        &__input {
-          width: 360px;
-          height: 50px;
-          border: 1px solid rgba(255, 255, 255, 0.3);
-          filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-          border-radius: 4px;
-          background: $color-footer;
-          outline: none;
-
-          margin-right: 12px;
-          padding-left: 16px;
-
-          color: #ffffff;
-          transition: $transition-animation;
-
-          &:hover,
-          &:focus {
-            border: 1px solid $active-color;
-          }
-        }
-
-        input[name="email"] {
-          color: #ffffff;
-        }
-
-        &__send {
-          margin-left: 10px;
-        }
+        margin-bottom: 20px;
       }
     }
   }
+
+  .contact {
+    &__link {
+      display: block;
+      text-align: center;
+    }
+  }
 }
+
+// .social-list {
+//   padding-bottom: 60px;
+// }
+
+&__subscribe {
+  display: inline-flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  &__title {
+    font-family: $main-font;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+
+    color: #ffffff;
+
+    margin-bottom: 20px;
+  }
+
+  &__footer {
+    width: 100%;
+  }
+
+  &__input {
+    width: 100%;
+    height: 50px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    background: $color-footer;
+    outline: none;
+
+    margin-right: 12px;
+    padding-left: 16px;
+    margin-bottom: 20px;
+
+    color: #ffffff;
+    transition: $transition-animation;
+
+    &:hover,
+    &:focus {
+      border: 1px solid $active-color;
+    }
+
+    input[name="email"] {
+      color: #ffffff;
+    }
+  }
+
+  &__send {
+    margin-left: 10px;
+  }
+}
+
+// @media screen and (min-width: 768px) {
+//   .footer {
+//     background: $color-footer;
+//     padding-top: 60px;
+//     padding-bottom: 60px;
+
+//     display: block;
+
+//     &__content {
+//       display: flex;
+//       flex-direction: row;
+//       flex-wrap: wrap;
+//       justify-content: space-around;
+//     }
+//   }
+
+//   .footer__address {
+//     text-align: center;
+//     // margin-bottom: 60px;
+
+//     .address {
+//       &__list {
+//         text-align: center;
+//       }
+//       &__item:not(:last-child) {
+//         margin-bottom: 10px;
+//       }
+
+//       &__link {
+//         font-family: $main-font;
+//         font-weight: normal;
+//         font-size: 14px;
+//         line-height: 1.71;
+//         letter-spacing: 0.03em;
+
+//         color: #ffffff;
+//       }
+//     }
+//   }
+
+//   .footer__join {
+//     width: 206px;
+//     // height: 80px;
+//     // margin-right: 70px;
+//     display: inline-block;
+//     align-items: center;
+//     text-align: center;
+//     margin-bottom: 60px;
+
+//     &__title {
+//       font-family: $main-font;
+//       font-weight: bold;
+//       font-size: 14px;
+//       line-height: 1.14;
+//       letter-spacing: 0.03em;
+//       text-transform: uppercase;
+
+//       color: #ffffff;
+
+//       margin-bottom: 20px;
+//     }
+//   }
+
+//   .footer__subscribe {
+//     display: inline-flex;
+//     flex-direction: column;
+//     text-align: center;
+//     align-items: center;
+//     justify-content: center;
+
+//     &__title {
+//       font-family: $main-font;
+//       font-weight: bold;
+//       font-size: 14px;
+//       line-height: 1.14;
+//       letter-spacing: 0.03em;
+//       text-transform: uppercase;
+
+//       color: #ffffff;
+
+//       margin-bottom: 20px;
+//     }
+
+//     &__footer {
+//       display: flex;
+//     }
+
+//     &__input {
+//       width: 360px;
+//       height: 50px;
+//       border: 1px solid rgba(255, 255, 255, 0.3);
+//       filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+//       border-radius: 4px;
+//       background: $color-footer;
+//       outline: none;
+
+//       margin-right: 12px;
+//       padding-left: 16px;
+
+//       color: #ffffff;
+//       transition: $transition-animation;
+
+//       &:hover,
+//       &:focus {
+//         border: 1px solid $active-color;
+//       }
+//     }
+
+//     input[name="email"] {
+//       color: #ffffff;
+//     }
+
+//     &__send {
+//       margin-left: 10px;
+//     }
+//   }
+// }
 
 // @media screen and (min-width: 1200px) {
 //   .footer {
